--- a/ejercicios/clase2.html
+++ b/ejercicios/clase2.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>My code in Codepen</title>
 	<!-- <link rel="stylesheet" href="css/styles.css"> -->
-	<script src="clase2.js"></script>
+	<script src=".\clase2.js"></script>
 </head>
 
 <body>
@@ -15,14 +16,7 @@
 		<h2>Subtitle</h2>
 	</header>
 
-	<section>
-		<ul id="lista">Unordered list</ul>
-	</section>
-	
-	<section>
-			<ul>Ordered list
-				<li>Item 1</li>
-		</ul>
+	<section id="demo">
 	</section>
 
 	<footer>
