--- a/ejemplos-paginas/ejercicios de variables/index.html
+++ b/ejemplos-paginas/ejercicios de variables/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <script src="./js/app.js"></script>
+    <script src="./js/arrays.js"></script>
     <title>Variables</title>
 </head>
 <body>
