--- a/ejemplos-paginas/ejercicios de variables/index.html
+++ b/ejemplos-paginas/ejercicios de variables/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <script src="./js/app.js"></script>
     <script src="./js/arrays-erik.js"></script>
+    <script src="./js/objetos.js"></script>
     <title>Variables</title>
 </head>
 <body>
