objetos - propiedades, métodos y func. constructora

--- a/ejemplos-paginas/ejercicios de variables/index.html
+++ b/ejemplos-paginas/ejercicios de variables/index.html
@@ -7,11 +7,14 @@
     <script src="./js/app.js"></script>
     <script src="./js/arrays-erik.js"></script>
     <script src="./js/objetos.js"></script>
+    <script src="./js/objetos2.js"></script>
     <title>Variables</title>
 </head>
 <body>
     <header></header>
-    <main id = "ejercicio"></main>
+    <main id = "ejercicio">
+        <section id = "demo"></section>
+    </main>
     <footer></footer>
 </body>
 </html>
