adiciones a object2.js

--- a/ejemplos-paginas/ejercicios de variables/index.html
+++ b/ejemplos-paginas/ejercicios de variables/index.html
@@ -13,7 +13,9 @@
 <body>
     <header></header>
     <main id = "ejercicio">
-        <section id = "demo"></section>
+        <section id = "demo">
+            <!-- Acá va lo que se pone en document.get.... innerHTML-->
+        </section>
     </main>
     <footer></footer>
 </body>
