ejercicios arreglos y objetos

--- a/ejemplos-paginas/ejercicios de variables/index.html
+++ b/ejemplos-paginas/ejercicios de variables/index.html
@@ -8,6 +8,7 @@
     <script src="./js/arrays-erik.js"></script>
     <script src="./js/objetos.js"></script>
     <script src="./js/objetos2.js"></script>
+    <script src="./js/ejercicios.js"></script>
     <title>Variables</title>
 </head>
 <body>
